# guitarproparser-wasm

.github/workflows/: package.yml
cli/: Cargo.toml
lib/: Cargo.toml  package.json
lib/src/: lib.rs  wasm.rs
lib/src/audio/: midi.rs
lib/src/model/: key_signature.rs  lyric.rs  measure.rs  page.rs  rse.rs  song.rs  track.rs
lib/src/types/beat/: core.rs  display.rs  effects.rs  stroke.rs  voice.rs
lib/src/types/chord/: barre.rs  core.rs  pitch_class.rs
lib/src/types/effects/: bend.rs  grace.rs  harmonic.rs  tremolo.rs  trill.rs
lib/src/types/enums/: beat.rs  chord.rs  effect.rs  measure.rs  music.rs  note.rs
lib/src/types/measure/: fermata.rs  header.rs  marker.rs
lib/src/types/mix_table/: change.rs  item.rs  wah.rs
lib/src/types/note/: core.rs  effects.rs
lib/src/types/song/: clipboard.rs  version.rs
