[package]
name = "lib"
version = "0.2.2"
authors = ["slundi"]
edition = "2021"
description = "Rust library and command line interface (CLI) for guitar tab files."
repository = "https://gitlab.com/slundi/guitar-io"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scorelib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true } 
fraction = "0.13"
encoding_rs = "0.8"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[features]
build-binary = ["clap"]
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dev-dependencies]
